# Kobayashi

./: .gitignore  Cargo.toml  README.md  flake.nix
lib/mochi/: Cargo.toml
lib/mochi/extensions/code/: CHANGELOG.md  README.md  flake.nix  language-configuration.json  package.json  vsc-extension-quickstart.md
lib/mochi/extensions/code/icons/: mochi-icon-theme.json
lib/mochi/extensions/code/syntaxes/: mochi.tmLanguage.json
lib/mochi/extensions/jetbrains/: .gitignore  build.gradle.kts  settings.gradle.kts
lib/mochi/extensions/jetbrains/src/main/kotlin/edu/shch/mochi/plugin/: Mochi.bnf  Mochi.flex  MochiFileType.kt  MochiIcons.kt  MochiLanguage.kt  MochiLexerAdapter.kt  MochiParserDefinition.kt  MochiUtil.kt
lib/mochi/extensions/jetbrains/src/main/kotlin/edu/shch/mochi/plugin/highlight/: MochiAnnotator.kt  MochiColorSettingsPage.kt  MochiSyntaxHighlightFactory.kt  MochiSyntaxHighlighter.kt
lib/mochi/extensions/jetbrains/src/main/kotlin/edu/shch/mochi/plugin/psi/: MochiElementType.kt  MochiFile.kt  MochiPsiImplUtil.kt  MochiTokenSets.kt  MochiTokenType.kt
lib/mochi/extensions/nvim/: README.md
lib/mochi/sample/: default.mochi
lib/mochi/src/: error.rs  lib.rs  mochi.pest  tests.rs  util.rs
lib/mochi/src/discord/: mod.rs
lib/mochi/src/parse/: role.rs
mochi/: simple.mochi  wip.mochi  受付.mochi
src/: main.rs
src/event/: mod.rs
src/language/: mod.rs
src/language/mochi/: data.rs  mochi.pest  mod.rs  structs.rs
src/language/udon/: mod.rs
